--- a/HTML/text_elements.html
+++ b/HTML/text_elements.html
@@ -38,10 +38,10 @@
     <h3>h1 제목</h3>
     <h6>h1 제목</h6>
 
-    <!-- <strong></strong> : 특정 문자나 단어, 문단을 강조하기 위해 사용하는 요소 -->
+    <!-- <strong></strong> : 특정 문자나 단어, 문단을 강조(굵은 글씨)하기 위해 사용하는 요소 -->
     <p>부산광역시 부산진구 <strong>중앙대로</strong> 668</p>
 
-    <!-- <em></em> : 특정 문자나 단어, 문단을 강조하기 위해 사용하는 요소 -->
+    <!-- <em></em> : 특정 문자나 단어, 문단을 강조(이탤릭체)하기 위해 사용하는 요소 -->
     <p>부산광역시 부산진구 <em>중앙대로</em> 668</p>
 
     <p>부산광역시 부산진구 <strong><em>중앙대로</em></strong> 668</p>
