--- a/HTML/link_img.html
+++ b/HTML/link_img.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <a></a> : 하이퍼링크를 사용하기 위한 요소, href 속성에 이동할 경로를 지정 -->
+    <!-- <a herf="링크주소"></a> -->
     <a href="https://naver.com">NAVER</a>       <!-- 외부에 있는 주소 -->
     <a href="https://naver.com" target="_blank">NAVER 2</a>
     <a href="./link_next.html">다음 페이지</a>  <!-- 내부에 있는 다른페이지 -->
