--- a/CSS/12.CSS3_Web_Font/css3_web_font.html
+++ b/CSS/12.CSS3_Web_Font/css3_web_font.html
@@ -11,15 +11,38 @@
         /* 구글 폰트 : https://fonts.google.com/?subset=korean&noto.script=Kore */
 
         /*
-            CDN 링크 방식 : 
+            CDN 링크 방식 : @import 방식으로 웹 폰트를 다운받아 사용
         */
-        
+        @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+        .nanum-gothic {
+            font-family: "Nanum Gothic";
+        }
 
 
         /*
-            서버 폰트 로딩 방식 : 
+            서버 폰트 로딩 방식 : @font-face 방식으로 웹 폰트를 등록해서 사용
         */
-        
+        @font-face {
+            font-family: 'Pretendard-Regular';
+            src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+            font-weight: 400;
+            font-style: normal;
+        }
+        .pretendard {
+            font-family: 'Pretendard-Regular';
+        }
+
+
+        /*
+            경로 내 폰트 파일을 불러오는 방식
+        */
+        @font-face {
+            font-family: VITRO;
+            src: url(./VITRO_CORE_TTF.ttf);
+        }
+        .vitro {
+            font-family: VITRO;
+        }
 
 
     </style>
@@ -30,6 +53,7 @@
     <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
     <h2 class="nanum-gothic">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
     <h2 class="pretendard">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+    <h2 class="vitro">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
 
 </body>
 </html>
