--- a/CSS/13.CSS3_Flexbox/css3_flexbox_1.html
+++ b/CSS/13.CSS3_Flexbox/css3_flexbox_1.html
@@ -180,7 +180,7 @@
             align-items: center;
         }
 
-        /* gap : 아이템 사이에 지정한 간격 만큼의 값을 주고 싶을 때 */
+        /* gap : 아이템 사이에 지정한만큼의 간격을 주고 싶을 때 */
 
         .gap {
             height: 300px;
